# stardist

./: .appveyor.yml  .gitignore  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: _1_question-help-support.md  _2_bug-report.md  _3_feature-request.md  config.yml
.github/workflows/: cibuildwheel.yml  tests.yml  tests_cron.yml
docker/: Dockerfile  README.md
examples/: 1_data.ipynb  2_training.ipynb  README.md
examples/2D/: 1_data.ipynb  2_training.ipynb  3_prediction.ipynb  4_sparse_training.ipynb
examples/3D/: 1_data.ipynb  2_training.ipynb  3_prediction.ipynb  4_sparse_training.ipynb
examples/3D_dist_mask/: 1_data.ipynb  2_training.ipynb  3_prediction.ipynb
examples/conic-2022/: README.md  conic.py  predict.ipynb  train.ipynb
examples/old/: 1_data.ipynb
extras/: README.md  qupath_export_annotations.groovy  qupath_export_annotations4multiclass.groovy  stardist_example_2D_colab.ipynb  stardist_postprocessing.ij  stardist_postprocessing.ijm
images/: stardist_multiclass.ai
stardist/: __init__.py  big.py  bioimageio_utils.py  export_bioimageio.py  matching.py  model.py  napari_plugin.py  nms.py  plot.py  rays3d.py  sample_patches.py  utils.py
tests/: _old_test_all.py  _old_test_nms.py  conftest.py  example_large.py  example_napari.py  test_affinity.py  test_all.py  test_big.py  test_bioimageio.py  test_matching.py  test_model2D.py  test_model3D.py  test_modelzoo.py  test_napari.py  test_nms.py  test_nms2D.py  test_nms3D.py  test_plot.py  test_stardist2D.py  test_stardist3D.py  test_utils.py  utils.py
(+76 files in other folders)
